--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,20 +4,24 @@ edition = "2018"
 name = "proton-c"
 readme = "README.md"
 version = "0.1.0"
+
 [[bin]]
 bench = false
 name = "proton-c"
 test = false
 
 [dependencies]
-stm32f3xx-hal = { version = "0.1.2", features = ["rt", "stm32f303"] }
-panic-semihosting = "0.5.1"
-cortex-m-rtfm = { version = "0.4.2", features = ["timer-queue"] }
-embedded-hal = "0.2.2"
+# stm32f3xx-hal = { version = "0.1.2", features = ["rt", "stm32f303"] }
+stm32f3xx-hal = { git = "https://github.com/dfrankland/stm32f3xx-hal", branch = "update-stm32f3", features = ["rt", "stm32f303", "unproven"] }
+panic-semihosting = "0.5.2"
+cortex-m-rtfm = { version = "0.4.3", features = ["timer-queue"] }
+embedded-hal = "0.2.3"
+
 [profile.dev]
 opt-level = 1
 lto = true
 incremental = false
+
 [profile.release]
 lto = true
 incremental = false
