--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,34 @@
 [package]
 authors = ["Dylan Frankland <github@frankland.io>"]
 edition = "2018"
+categories = ["embedded", "hardware-support", "no-std"]
+description = "Board Support Crate for the Proton C"
+keywords = ["arm", "cortex-m", "stm32"]
+license = "MIT"
 name = "proton-c"
 readme = "README.md"
+repository = "https://github.com/dfrankland/proton-c"
+documentation = "https://docs.rs/proton-c"
 version = "0.1.0"
 
 [dependencies]
-# stm32f3xx-hal = { version = "0.1.2", features = ["rt", "stm32f303"] }
-stm32f3xx-hal = { git = "https://github.com/dfrankland/stm32f3xx-hal", branch = "update-stm32f3", features = ["rt", "stm32f303", "unproven"] }
+embedded-hal = "0.2.3"
+
+[dependencies.stm32f3xx-hal]
+version = "0.2.0"
+
+[dev-dependencies]
 panic-semihosting = "0.5.2"
 cortex-m-rtfm = { version = "0.4.3", features = ["timer-queue"] }
-embedded-hal = "0.2.3"
+
+[dev-dependencies.stm32f3xx-hal]
+version = "0.2.0"
+features = ["rt", "stm32f303", "unproven"]
+# git = "https://github.com/dfrankland/stm32f3xx-hal"
+# branch = "master"
+
+[features]
+rt = ["stm32f3xx-hal/rt"]
 
 [profile.dev]
 opt-level = 1
