--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ version = "0.1.0"
 
 [dependencies]
 embedded-hal = "0.2.3"
-stm32f3xx-hal = { version = "0.2.0", features = ["stm32f303"] }
+stm32f3xx-hal = { version = "0.2.0", features = ["rt", "stm32f303"] }
 
 [dev-dependencies]
 panic-semihosting = "0.5.2"
@@ -26,15 +26,14 @@ features = ["rt", "stm32f303", "unproven"]
 # branch = "master"
 
 [features]
-rt = ["stm32f3xx-hal/rt"]
+default = ["rt"]
+rt = []
 
+[profile]
 [profile.dev]
-opt-level = 1
-lto = true
-incremental = false
+debug = true
 
 [profile.release]
-lto = true
-incremental = false
-opt-level = "z"
 debug = true
+lto = true
+opt-level = "s"
