--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,9 @@ embedded-hal = "0.2.3"
 stm32f3xx-hal = { version = "0.2.3", features = ["rt", "stm32f303"] }
 
 [dev-dependencies]
+alloc-cortex-m = "0.3.5"
 cortex-m = "0.6.0"
+cortex-m-rt = "0.6.8"
 cortex-m-rtfm = { version = "0.4.3", features = ["timer-queue"] }
 cortex-m-semihosting = "0.3.3"
 panic-semihosting = "0.5.2"
