--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,14 +23,8 @@ cortex-m-rt = "0.6.8"
 cortex-m-rtfm = { version = "0.4.3", features = ["timer-queue"] }
 cortex-m-semihosting = "0.3.3"
 panic-semihosting = "0.5.2"
+stm32-usbd = { version = "0.3.0", features = ["stm32f303xc"] }
 usb-device = "0.2.1"
-
-[dev-dependencies.stm32-usbd]
-# Waiting for next release to use 0.2.X of `stm32f3xx-hal`
-# version = "0.2"
-features = ["stm32f303xc"]
-git = "https://github.com/stm32-rs/stm32-usbd"
-branch = "master"
 
 [dev-dependencies.stm32f3xx-hal]
 version = "0.2.3"
