--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ exclude = ["images/**/*"]
 
 [dependencies]
 embedded-hal = "0.2.3"
-stm32f3xx-hal = { git = "https://github.com/dfrankland/stm32f3xx-hal", branch = "stateful", features = ["rt", "stm32f303xc"] }
+stm32f3xx-hal = { git = "https://github.com/stm32-rs/stm32f3xx-hal", rev = "35c6c2d68bd674cb311a8e7a2ab001ae48dce069", features = ["rt", "stm32f303xc"] }
 
 [dev-dependencies]
 alloc-cortex-m = "0.3.5"
@@ -26,13 +26,10 @@ panic-semihosting = "0.5.3"
 usb-device = "0.2.3"
 
 [dev-dependencies.stm32f3xx-hal]
-# version = "0.2.3"
+# version = "0.3.0"
 features = ["rt", "stm32f303xc", "unproven", "stm32-usbd"]
-git = "https://github.com/dfrankland/stm32f3xx-hal"
-branch = "stateful"
-
-[patch.crates-io]
-stm32f3xx-hal = { git = "https://github.com/dfrankland/stm32f3xx-hal", branch = "stateful", features = ["rt", "stm32f303xc", "unproven", "stm32-usbd"] }
+git = "https://github.com/stm32-rs/stm32f3xx-hal"
+rev = "35c6c2d68bd674cb311a8e7a2ab001ae48dce069"
 
 [features]
 default = ["rt"]
